@@ -1,4 +1,11 @@
-﻿shmuel 10.04.2015 01:00:29 +0200 - build 505
+﻿shmuel 10.04.2015 17:44:53 +0200 - build 506
+
+1. LuaFAR: изменения, связанные с функцией far.SubscribeDialogDrawEvents:
+   - Функция не обрабатывает параметры и не возвращает значения.
+   - При открытии каждого нового диалога группа событий перерисовки не передаётся
+     в export.ProcessDialogEvent, покуда не будет вызвана far.SubscribeDialogDrawEvents.
+
+shmuel 10.04.2015 01:00:29 +0200 - build 505
 
 1. Рефакторинг.
 
